// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field renders a check field correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <input
      aria-describedby="formNameFieldNameDescription"
      disabled={false}
      id="formNameFieldName"
      name="fieldName"
      onBlur={[MockFunction]}
      onChange={[Function]}
      style={
        Object {
          "borderColor": "#767676",
          "borderRadius": "3px",
          "borderStyle": "solid",
          "borderWidth": "1px",
          "marginBottom": "3px",
          "marginRight": "10px",
        }
      }
      type="checkbox"
      value="false"
    />
    <label
      htmlFor="formNameFieldName"
    >
      Check Field
    </label>
  </div>
  
  
</div>
`;

exports[`Field renders a check field correctly 2`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <input
      aria-describedby="formNameFieldNameDescription"
      disabled={false}
      id="formNameFieldName"
      name="fieldName"
      onBlur={[MockFunction]}
      onChange={[Function]}
      style={
        Object {
          "borderColor": "red",
          "borderRadius": "3px",
          "borderStyle": "solid",
          "borderWidth": "1px",
          "marginBottom": "3px",
          "marginRight": "10px",
        }
      }
      type="checkbox"
      value="false"
    />
    <label
      htmlFor="formNameFieldName"
    >
      Check Field
    </label>
  </div>
  <p
    data-testid="formNameFieldNameError"
    style={
      Object {
        "color": "red",
        "margin": 0,
      }
    }
  >
    error
  </p>
  <p
    id="formNameFieldNameDescription"
    style={
      Object {
        "margin": 0,
      }
    }
  >
    description
  </p>
</div>
`;

exports[`Field renders a number field correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="formNameFieldName"
  >
    Number Field
  </label>
  <input
    aria-describedby="formNameFieldNameDescription"
    disabled={false}
    id="formNameFieldName"
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[Function]}
    style={
      Object {
        "borderColor": "#767676",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    type="number"
    value={10}
  />
  
  
</div>
`;

exports[`Field renders a number field correctly 2`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="formNameFieldName"
  >
    Number Field
  </label>
  <input
    aria-describedby="formNameFieldNameDescription"
    disabled={false}
    id="formNameFieldName"
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[Function]}
    style={
      Object {
        "borderColor": "red",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    type="number"
    value={10}
  />
  <p
    data-testid="formNameFieldNameError"
    style={
      Object {
        "color": "red",
        "margin": 0,
      }
    }
  >
    error
  </p>
  <p
    id="formNameFieldNameDescription"
    style={
      Object {
        "margin": 0,
      }
    }
  >
    description
  </p>
</div>
`;

exports[`Field renders a select field correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="formNameFieldName"
  >
    Select Field
  </label>
  <select
    aria-describedby="formNameFieldNameDescription"
    disabled={false}
    id="formNameFieldName"
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[Function]}
    style={
      Object {
        "borderColor": "#767676",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    value=""
  >
    <option
      disabled={true}
      value=""
    >
      
    </option>
    <option
      value="option1"
    >
      Option 1
    </option>
    <option
      value="option2"
    >
      Option 2
    </option>
  </select>
  
  
</div>
`;

exports[`Field renders a select field correctly 2`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="formNameFieldName"
  >
    Select Field
  </label>
  <select
    aria-describedby="formNameFieldNameDescription"
    disabled={false}
    id="formNameFieldName"
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[Function]}
    style={
      Object {
        "borderColor": "red",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    value=""
  >
    <option
      disabled={true}
      value=""
    >
      placeholder
    </option>
    <option
      value="option1"
    >
      Option 1
    </option>
    <option
      value="option2"
    >
      Option 2
    </option>
  </select>
  <p
    data-testid="formNameFieldNameError"
    style={
      Object {
        "color": "red",
        "margin": 0,
      }
    }
  >
    error
  </p>
  <p
    id="formNameFieldNameDescription"
    style={
      Object {
        "margin": 0,
      }
    }
  >
    description
  </p>
</div>
`;

exports[`Field renders a text area field correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="formNameFieldName"
  >
    Text Area Field
  </label>
  <textarea
    aria-describedby="formNameFieldNameDescription"
    disabled={false}
    id="formNameFieldName"
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[Function]}
    rows={6}
    style={
      Object {
        "borderColor": "#767676",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    value=""
  />
  
  
</div>
`;

exports[`Field renders a text area field correctly 2`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="formNameFieldName"
  >
    Text Area Field
  </label>
  <textarea
    aria-describedby="formNameFieldNameDescription"
    disabled={false}
    id="formNameFieldName"
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[Function]}
    rows={12}
    style={
      Object {
        "borderColor": "red",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    value=""
  />
  <p
    data-testid="formNameFieldNameError"
    style={
      Object {
        "color": "red",
        "margin": 0,
      }
    }
  >
    error
  </p>
  <p
    id="formNameFieldNameDescription"
    style={
      Object {
        "margin": 0,
      }
    }
  >
    description
  </p>
</div>
`;

exports[`Field renders a text field correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="formNameFieldName"
  >
    Text Field
  </label>
  <input
    aria-describedby="formNameFieldNameDescription"
    autoComplete="off"
    disabled={false}
    id="formNameFieldName"
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[Function]}
    style={
      Object {
        "borderColor": "#767676",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    type="text"
    value=""
  />
  
  
</div>
`;

exports[`Field renders a text field correctly 2`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="formNameFieldName"
  >
    Text Field
  </label>
  <input
    aria-describedby="formNameFieldNameDescription"
    autoComplete="off"
    disabled={false}
    id="formNameFieldName"
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[Function]}
    style={
      Object {
        "borderColor": "red",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    type="text"
    value=""
  />
  <p
    data-testid="formNameFieldNameError"
    style={
      Object {
        "color": "red",
        "margin": 0,
      }
    }
  >
    error
  </p>
  <p
    id="formNameFieldNameDescription"
    style={
      Object {
        "margin": 0,
      }
    }
  >
    description
  </p>
</div>
`;
